--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ environment:
 
 dependencies:
   sqflite: ^1.3.2+1
+  flutter_localizations:
+    sdk: flutter 
   flutter:
     sdk: flutter
 
@@ -40,6 +42,7 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
 
+  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
